welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
avance(); getCouleurSol();
                       ^